--- a/theme/css/themes.css
+++ b/theme/css/themes.css
@@ -22901,6 +22901,7 @@ button:focus {
 }
 
 /*# sourceMappingURL=themes.css.map */
+
 .img-custom {
   position: relative;
   height: auto;
@@ -22988,5 +22989,77 @@ button:focus {
 @media (max-width: 480px) {
   .custom-home-background {
       background-image: url('../images/bg-mobile.webp'); /* Path to the mobile background image */
+  }
+}
+
+
+/* Our company custom */
+
+.about-us-section {
+  background-image: url('../images/about-us/office.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 50px 0; /* Adjust padding as needed */
+  color: white; /* Adjust text color for better contrast */
+  height: 35rem;
+}
+
+.about-us-section h1,p {
+  margin: 0;
+  color: #000 !important;
+}
+
+.know-img-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 25rem;
+  overflow: hidden;
+  border-radius: 10%;
+}
+
+.know-img-box img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.about-card {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid #eeeeee;
+  border-radius: 25px;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 1.2rem;
+}
+
+.about-card img {
+  margin: 1rem;
+  border-radius: 15px;
+}
+
+@media (max-width: 768px) {
+  .about-properties h1{
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .about-card {
+    margin-bottom: 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .know-img-box {
+    margin-bottom: 2rem;
   }
 }
